force-app/main/default/objects/SccTerritoryRule__mdt/SccTerritoryRule__mdt.object-meta.xml
<CustomObject>
    <label>客户编码地区格式规则</label>
</CustomObject>