force-app/main/default/objects/SccTerritoryRule__mdt/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <label>编码前缀</label>
    <length>3</length>
    <type>Text</type>
</CustomField>