force-app/main/default/objects/SccTerritoryRule__mdt/fields/SequenceCategory__c.field-meta.xml
<CustomField>
    <fullName>SequenceCategory__c</fullName>
    <label>序列类别</label>
    <length>40</length>
    <type>Text</type>
</CustomField>