force-app/main/default/objects/SccTerritoryRule__mdt/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>地区类别</label>
    <length>40</length>
    <type>Text</type>
</CustomField>