force-app/main/default/objects/SccTerritoryRule__mdt/fields/UseRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>UseRegistrationNumber__c</fullName>
    <defaultValue>true</defaultValue>
    <label>优先使用登记号码</label>
    <type>Checkbox</type>
</CustomField>